--- a/index.html
+++ b/index.html
@@ -107,13 +107,15 @@
         }
         .skill-badge i {
             font-size: 1.2rem;
-        }
-        /* Projects Section */
+        }        /* Projects Section */
         .project-card {
             background: #1c2526;
             border-radius: 10px;
             overflow: hidden;
             transition: transform 0.3s;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
         }
         .project-card:hover {
             transform: translateY(-10px);
@@ -125,6 +127,12 @@
         }
         .project-card .card-body {
             padding: 20px;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+        }
+        .project-card .card-body .btn {
+            margin-top: auto;
         }
         /* Certifications Section */
         .certification-list {
@@ -213,8 +221,8 @@
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>                    <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#hobbies">Hobbies</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -225,11 +233,10 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6" data-aos="fade-right">
-                    <h1>Hi, I'm Devang Kumawat</h1>
+                <div class="col-md-6" data-aos="fade-right">                    <h1>Hi, I'm Devang Kumawat</h1>
                     <h2>I'm a <span class="typed-text"></span></h2>
-                    <p class="lead my-4">B.E. Information Science student, passionate about AI and Full-Stack Development.</p>
-                    <a href="https://drive.google.com/file/d/1Ag-PpcgiZlLyRdtWbekOUhHc4jVeXtKj/view?usp=sharing" class="btn btn-outline-light">Download Resume</a>
+                    <p class="lead my-4">B.E. Information Science student with expertise in AI/ML, Full-Stack Development, and innovative problem-solving.</p>
+                    <a href="https://drive.google.com/file/d/1vVdxH3CeweIyfT-eqaxwW5RLAeeDzyBO/view?usp=sharing" class="btn btn-outline-light">Download Resume</a>
                 </div>
                 <div class="col-md-6 text-center" data-aos="fade-left">
                     <img src="images\herosection.jpg" alt="Devang Kumawat" class="img-fluid">
@@ -245,12 +252,10 @@
             <div class="row">
                 <div class="col-md-6" data-aos="fade-right">
                     <img src="images/herosection.jpg" alt="About Image" class="img-fluid" sizes="400x400">
-                </div>
-                <div class="col-md-6" data-aos="fade-left">
+                </div>                <div class="col-md-6" data-aos="fade-left">
                     <h3>Who Am I?</h3>
-                    <p>I'm a B.E. Information Science student, specializing in AI, Machine Learning, and Full-stack Development.</p>
-                    <p>My projects, like <b>Nidra</b> and <b>Sunday Insurance</b>, showcase my ability to build innovative solutions using Python, TensorFlow, and modern web technologies. I thrive on solving complex problems and am eager to contribute to impactful tech projects.</p>
-                    <a href="https://drive.google.com/file/d/1Ag-PpcgiZlLyRdtWbekOUhHc4jVeXtKj/view?usp=sharing" class="btn btn-custom">Download Resume</a>
+                    <p>I'm a passionate B.E. Information Science student at BMS Institute of Technology and Management, Bangalore, with expertise in AI, Machine Learning, and Full-stack Development. Currently maintaining a CGPA of 8.11/10, I have hands-on experience building innovative solutions that solve real-world problems.</p>                    <p>My projects demonstrate proficiency in React, TypeScript, Python, TensorFlow, and modern web technologies. I specialize in creating AI-powered applications that deliver measurable business value and user impact. As a content creator with 100,000+ YouTube views and technical lead managing cross-functional teams, I bring both technical skills and leadership experience to every project.</p>
+                    <a href="https://drive.google.com/file/d/1vVdxH3CeweIyfT-eqaxwW5RLAeeDzyBO/view?usp=sharing" class="btn btn-custom">Download Resume</a>
                 </div>
             </div>
         </div>
@@ -265,26 +270,30 @@
                 <div class="skill-badge" data-aos="fade-up" data-aos-delay="50"><i class="fab fa-java"></i> Java</div>
                 <div class="skill-badge" data-aos="fade-up" data-aos-delay="100"><i class="fab fa-cuttlefish"></i> C++</div>
                 <div class="skill-badge" data-aos="fade-up" data-aos-delay="150"><i class="fab fa-html5"></i> HTML5</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="200"><i class="fab fa-css3-alt"></i> CSS3</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="250"><i class="fab fa-js"></i> JavaScript</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="300"><i class="fab fa-react"></i> React</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="350"><i class="fab fa-node-js"></i> Node.js</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="400"><i class="fas fa-brain"></i> TensorFlow</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="450"><i class="fas fa-brain"></i> Keras</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="500"><i class="fas fa-brain"></i> Scikit-learn</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="550"><i class="fas fa-comment"></i> NLP</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="600"><i class="fas fa-table"></i> Pandas</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="650"><i class="fas fa-table"></i> NumPy</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="700"><i class="fas fa-chart-line"></i> Matplotlib</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="750"><i class="fas fa-chart-line"></i> Seaborn</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="800"><i class="fas fa-database"></i> PostgreSQL</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="850"><i class="fas fa-database"></i> MongoDB</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="900"><i class="fas fa-database"></i> MySQL</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="950"><i class="fab fa-git-alt"></i> Git</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1000"><i class="fas fa-tasks"></i> Agile</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1050"><i class="fas fa-tasks"></i> Scrum</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1100"><i class="fas fa-code"></i> Data Structures</div>
-                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1150"><i class="fas fa-code"></i> Algorithms</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="200"><i class="fab fa-css3-alt"></i> CSS3</div>                <div class="skill-badge" data-aos="fade-up" data-aos-delay="250"><i class="fab fa-js"></i> JavaScript</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="300"><i class="fab fa-js"></i> TypeScript</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="350"><i class="fab fa-react"></i> React</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="400"><i class="fas fa-wind"></i> Tailwind CSS</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="450"><i class="fab fa-bootstrap"></i> Bootstrap</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="500"><i class="fab fa-node-js"></i> Node.js</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="550"><i class="fas fa-server"></i> Express.js</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="600"><i class="fas fa-brain"></i> TensorFlow</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="650"><i class="fas fa-brain"></i> Keras</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="700"><i class="fas fa-brain"></i> Scikit-learn</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="750"><i class="fas fa-comment"></i> NLP</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="800"><i class="fas fa-table"></i> Pandas</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="850"><i class="fas fa-table"></i> NumPy</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="900"><i class="fas fa-chart-line"></i> Matplotlib</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="950"><i class="fas fa-chart-line"></i> Seaborn</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1000"><i class="fas fa-database"></i> PostgreSQL</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1050"><i class="fas fa-database"></i> MongoDB</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1100"><i class="fas fa-database"></i> MySQL</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1150"><i class="fab fa-git-alt"></i> Git</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1200"><i class="fab fa-github"></i> GitHub</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1250"><i class="fab fa-figma"></i> Figma</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1300"><i class="fas fa-tasks"></i> Agile</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1350"><i class="fas fa-code"></i> Data Structures</div>
+                <div class="skill-badge" data-aos="fade-up" data-aos-delay="1400"><i class="fas fa-code"></i> Algorithms</div>
             </div>
         </div>
     </section>
@@ -297,35 +306,33 @@
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="project-card">
                         <!-- <img src="https://via.placeholder.com/300x200" alt="Nidra"> -->
-                        <div class="card-body">
-                            <h5>Nidra: Sleep Stage Classification AI</h5>
-                            <p>Developed a CNN + LSTM model to classify sleep stages from audio, achieving 70% accuracy and reducing costs by 99%. Trained on 28GB+ audio data using Python Data Generators.</p>
+                        <div class="card-body">                            <h5>Nidra: Sleep Stage Classification AI</h5>
+                            <p><strong>Advanced Deep Learning Solution</strong> - Developed a sophisticated CNN + LSTM hybrid model to classify sleep stages from audio recordings, achieving 70% accuracy while reducing traditional sleep study costs by 99%. Successfully processed and trained on 28GB+ of audio data using optimized Python Data Generators for memory-efficient training.</p>
+                            <p><strong>Tech Stack:</strong> Python, TensorFlow, Keras, NumPy, Audio Processing, Deep Learning</p>
                             <a href="https://github.com/devangk003/Nidra" class="btn btn-custom">View Project</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="project-card">
-                        <!-- <img src="https://via.placeholder.com/300x200" alt="SundayInsurance"> -->
-                        <div class="card-body">
-                            <h5>SundayInsurance: AI Vehicle Insurance</h5>
-                            <p>Built an AI recommendation engine with web scraping API, reducing decision time to under 5 minutes. Used ML to optimize policy selection based on coverage and cost.</p>
+                        <!-- <img src="https://via.placeholder.com/300x200" alt="SundayInsurance"> -->                        <div class="card-body">
+                            <h5>SundayInsurance: Intelligent Vehicle Insurance Platform</h5>
+                            <p><strong>AI-Powered Insurance Platform</strong> - Implemented responsive interfaces in React 18 & TypeScript with ≥95% Lighthouse performance. Built AI recommendation engine that cut user decision time from 2+ hours to under 5 minutes (96% improvement). Developed real-time web scraping API processing 500+ insurance policies daily with ML algorithms increasing user satisfaction by 40%.</p>
+                            <p><strong>Tech Stack:</strong> React 18, TypeScript, Tailwind CSS, Framer Motion, Vite, Node.js, Machine Learning, Puppeteer</p>
                             <a href="https://github.com/devangk003/SundayInsurance" class="btn btn-custom">View Project</a>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+                </div>                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-card">
-                        <!-- <img src="https://via.placeholder.com/300x200" alt="Developer Toolbox"> -->
+                        <!-- <img src="https://via.placeholder.com/300x200" alt="GoFetch"> -->
                         <div class="card-body">
-                            <h5>Developer Toolbox</h5>
-                            <p>Created a full-stack app with 6 AI tools (e.g., Text Summarizer, ChatBot) using React, Node.js, and OpenAI API. Enhanced security with JWT, cutting unauthorized access by 60%.</p>
-                            
-                            <a href="https://github.com/devangk003" class="btn btn-custom">View Project</a>
+                            <h5>GoFetch: Natural Language MongoDB Query App</h5>
+                            <p><strong>NLP-Powered Database Interface</strong> - Engineered natural language processing system using Gemini API and MongoDB Atlas Search to transform plain English queries into complex database aggregations, reducing query complexity by 80% for non-technical users. Built full-stack air quality monitoring web application with interactive map visualization using Leaflet.js.</p>                            <p><strong>Tech Stack:</strong> React 18, TypeScript, Tailwind CSS, Vite, Node.js, MongoDB Atlas, Gemini API, Leaflet.js</p>
+                            <a href="https://github.com/devangk003/GoFetch" class="btn btn-custom">View Project</a>
                         </div>
                     </div>
                 </div>
-            </ poste>
+            </div>
         </div>
     </section>
 
@@ -350,7 +357,39 @@
                     <span>NoSQL Course Training - MongoDB Developer</span>
                     <a href="https://drive.google.com/file/d/1WqiS2Wl2f06wF-km27X4GX7I8wVn7EK1/view?usp=sharing" target="_blank">View Certificate</a>
                 </li>
-            </ul>
+            </ul>        </div>
+    </section>
+
+    <!-- Hobbies & Interests Section -->
+    <section id="hobbies" class="about">
+        <div class="container">
+            <h2 class="section-title">Hobbies & Interests</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4" data-aos="fade-up">
+                    <div class="project-card">
+                        <div class="card-body">
+                            <h5><i class="fab fa-youtube"></i> Content Creator</h5>
+                            <p>Built YouTube channel to <strong>100,000+ views</strong>, creating engaging content and building a community around technology and programming.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="project-card">
+                        <div class="card-body">
+                            <h5><i class="fas fa-users"></i> Technical Leadership</h5>
+                            <p>Managed cross-functional teams delivering <strong>3 major projects</strong> on-time and under budget, demonstrating strong project management and leadership skills.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="project-card">
+                        <div class="card-body">
+                            <h5><i class="fas fa-video"></i> Freelance Video Editing</h5>
+                            <p>Completed <strong>15+ video editing projects</strong> using Adobe Premiere Pro, maintaining a <strong>100% client satisfaction rate</strong> through high-quality deliverables.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -365,9 +404,7 @@
                     <a href="https://linkedin.com/in/devangk003" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
                 <p>Email: oyeeKumawat@gmail.com</p>
-                <p>Phone: +91-9602089889</p>
-            </div>
-        </div>
+                <p>Phone: +91-9602089889</p>            </div>        </div>
     </section>
 
     <!-- Footer -->
